--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.page-1 h1{
+  font-family: Lato;
+  font-size: 92px;
+  font-weight: 800;
+  line-height: 96px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
+  box-shadow: 0px 7.961538314819336px 7.961538314819336px 0px #00000040;
+}
