--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,13 @@
   color: #fff;
   box-shadow: 0px 7.961538314819336px 7.961538314819336px 0px #00000040;
 }
+ 
+.page-1 button{
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
+}
