--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -33,9 +35,18 @@
 
 .page-2 header{
   font-family: Arimo;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 700;
   line-height: 48px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.page-2 div div h4{
+  font-family: Kanit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
   letter-spacing: 0em;
   text-align: center;
 }
