--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,3 +51,34 @@
   text-align: center;
   margin-top: 12px;
 }
+
+.page-3 div div img{
+  width: 24px;
+  height: 24px;
+}
+
+.page-3 div div div{
+  margin-left: 20px;
+  margin-top: -5px;
+}
+
+.page-3 div div div h4{
+  font-family: Kanit;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 2px;
+}
+
+.page-3 div div div h5{
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #555555;
+  max-width: 180px;
+}
