--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,3 +82,34 @@
   color: #555555;
   max-width: 180px;
 }
+
+.page-32 div header{
+  font-family: Lato;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
+}
+
+.page-32 div p{
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
+  max-width: 400px;
+}
+
+.page-32 div button{
+  font-family: Lato;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: center;
+  background-color: #fff;
+}
