--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,7 @@
   color: #fff;
 }
 
-.page-2 header{
+.page-2 header, .page-4 header{
   font-family: Arimo;
   font-size: 32px;
   font-weight: 700;
@@ -40,7 +40,7 @@
   text-align: center;
 }
 
-.page-2 div div h4{
+.page-2 div div h4, .page-4 div div h4 {
   font-family: Kanit;
   font-size: 16px;
   font-weight: 400;
@@ -48,6 +48,16 @@
   letter-spacing: 0em;
   text-align: center;
   margin-top: 12px;
+}
+
+.page-4{
+  font-family: Lato;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: center;
+  
 }
 
 .page-3 div div img{
@@ -67,7 +77,7 @@
   line-height: 25px;
   letter-spacing: 0em;
   text-align: left;
-  margin-bottom: 2px;
+  /* margin-bottom: 2px; */
 }
 
 .page-3 div div div h5{
@@ -79,6 +89,26 @@
   text-align: left;
   color: #555555;
   max-width: 180px;
+}
+
+.page-4 div div h5{
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #555555;
+  margin-top: 2px;
+}
+
+.page-4 button{
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 
 .page-32 div header{
