--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -145,3 +145,12 @@
   padding: 12px 32px 12px 32px;
   margin-top: 30px;
 }
+
+.about1{
+  font-family: Lato;
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 3rem; /* 100% */
+  text-transform: uppercase;
+}
