--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,7 @@
   color: #fff;
 }
 
-.page-2 header, .page-4 header{
+.page-2 header, .page-4 header, .about3 header{
   font-family: Arimo;
   font-size: 32px;
   font-weight: 700;
