--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,7 +31,7 @@
   color: #fff;
 }
 
-.page-2 header, .page-4 header, .about3 header{
+.page-2 header, .page-4 header, .about3 header, .testimonial header{
   font-family: Arimo;
   font-size: 32px;
   font-weight: 700;
@@ -77,7 +77,6 @@
   line-height: 25px;
   letter-spacing: 0em;
   text-align: left;
-  /* margin-bottom: 2px; */
 }
 
 .page-3 div div div h5{
