--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -161,3 +161,21 @@
   font-weight: 500;
   line-height: normal;
 }
+
+.testimonial div div div p{
+  color: #555;
+  font-family: Kanit;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.25rem; /* 150% */
+}
+
+.testimonial div div div h3{
+  color: #1D1D1D;
+  font-family: Kanit;
+  font-size: 1.28rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
