--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -145,7 +145,7 @@
   margin-top: 30px;
 }
 
-.about1{
+.about1 h3, .contact h3{
   font-family: Lato;
   font-size: 2.5rem;
   font-style: normal;
@@ -177,5 +177,22 @@
   font-size: 1.28rem;
   font-style: normal;
   font-weight: 700;
+  line-height: normal;
+}
+
+.contact2 h3{
+  font-family: Arimo;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 3rem; /* 133.333% */
+}
+
+.contact2 p{
+  color: #555;
+  font-family: Lato;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
   line-height: normal;
 }
