--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,6 +180,9 @@
   line-height: normal;
 }
 
+/* .contact2{
+  overflow-x: hidden;
+} */
 .contact2 h3{
   font-family: Arimo;
   font-size: 2.25rem;
@@ -195,4 +198,29 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.contact2 aside div h5{
+  color: #1D1D1D;
+  font-family: Kanit;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 3rem; /* 200% */
+}
+
+.contact2 Form input{
+  max-width: 51.25rem;
+  border: 1px solid #EBEBEB;
+}
+.contact2 Form textarea{
+  max-width: 51.25rem;
+  max-height: 11.75rem;
+  flex-shrink: 0;
+  border: 1px solid #EBEBEB;
+  /* background: #FFF; */
+}
+
+.contact2 Form button{
+  max-width: 51.25rem;
 }
