--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -209,6 +209,15 @@
   line-height: 3rem; /* 200% */
 }
 
+.contact2 aside div p{
+  color:  #555;
+  font-family: Lato;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .contact2 Form input{
   width: 25rem;
   height: 3.3rem;
@@ -224,7 +233,8 @@
 }
 
 .contact2 Form button{
-  max-width: 51.25rem;
+  width: 12rem;
+  height: 3.625rem;
 }
 
 .contact2 Form div div label, .contact2 Form div label {
