--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -249,3 +249,19 @@
   line-height: normal;
   margin-bottom: 1rem;
 }
+.footer{
+  color: #1D1D1D;
+  font-family: Lato;
+  font-size: 0.9rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75rem; /* 175% */
+}
+
+.footer header{
+  font-weight: 700;
+}
+
+.footer input{
+  width: 15rem;
+}
